--- a/src/A2/BrandBundle/Resources/views/Brand/edit.html.twig
+++ b/src/A2/BrandBundle/Resources/views/Brand/edit.html.twig
@@ -1,21 +1,30 @@
-{% extends 'base.html.twig' %}
+{% extends "A2BrandBundle::layout.html.twig" %}
 
-{% block body %}
-    <h1>Brand edit</h1>
+{% block brand_content %}
+
+    <h2>Modification de la marque</h2>
 
     {{ form_start(edit_form) }}
-        {{ form_widget(edit_form) }}
-        <input type="submit" value="Edit" />
+
+    {{ form_errors(edit_form) }}
+    <div class="form-horizontal">
+        <hr />
+        <div class="form-group">
+            {{ form_label(edit_form.name, "Nom", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(edit_form.name) }}
+            <div class="col-md-4">
+                {{ form_widget(edit_form.name, {'attr': {'class': 'form-control', 'value': brand.name }}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Valider" class="btn btn-default" />
+            </div>
+        </div>
+    </div>
+
+    <p><a href="{{ path('a2_brand_index') }}">Retour à la liste</a></p>
+
     {{ form_end(edit_form) }}
 
-    <ul>
-        <li>
-            <a href="{{ path('brand_index') }}">Back to the list</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
-{% endblock %}
+{% endblock brand_content %}
