--- a/src/A2/OrderBundle/Resources/views/Orders/show.html.twig
+++ b/src/A2/OrderBundle/Resources/views/Orders/show.html.twig
@@ -100,7 +100,8 @@
     </div>
     <p>
         <a href="{{ path('a2_orders_index') }}">Retour à la liste</a> |
-        <a href="{{ path('a2_orders_edit', { 'id': order.id }) }}">Modifier</a>
+        <a href="{{ path('a2_orders_edit', { 'id': order.id }) }}">Modifier</a> |
+        <a href="{{ path('a2_orders_received', { 'id': order.id }) }}">">Marquer la commande comme reçu</a>
     </p>
 
 {% endblock orders_content %}
