--- a/src/A2/CurrencyBundle/Resources/views/Currency/new.html.twig
+++ b/src/A2/CurrencyBundle/Resources/views/Currency/new.html.twig
@@ -1,16 +1,37 @@
-{% extends 'base.html.twig' %}
+{% extends "A2CurrencyBundle::layout.html.twig" %}
 
-{% block body %}
-    <h1>Currency creation</h1>
+{% block currency_content %}
+
+    <h2>Ajout d'une nouvelle devise</h2>
 
     {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <input type="submit" value="Create" />
+
+    {{ form_errors(form) }}
+    <div class="form-horizontal">
+        <hr />
+        <div class="form-group">
+            {{ form_label(form.name, "Nom", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.name) }}
+            <div class="col-md-4">
+                {{ form_widget(form.name, {'attr': {'class': 'form-control'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(form.symbol, "Symbole", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.symbol) }}
+            <div class="col-md-4">
+                {{ form_widget(form.symbol, {'attr': {'class': 'form-control'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Créer" class="btn btn-primary" />
+            </div>
+        </div>
+    </div>
+
+    <p><a href="{{ path('a2_currency_index') }}">Retour à la liste</a></p>
+
     {{ form_end(form) }}
 
-    <ul>
-        <li>
-            <a href="{{ path('currency_index') }}">Back to the list</a>
-        </li>
-    </ul>
-{% endblock %}
+{% endblock currency_content %}
