--- a/src/A2/CurrencyBundle/Resources/views/Currency/show.html.twig
+++ b/src/A2/CurrencyBundle/Resources/views/Currency/show.html.twig
@@ -1,56 +1,60 @@
-{% extends 'base.html.twig' %}
+{% extends "A2CurrencyBundle::layout.html.twig" %}
 
-{% block body %}
-    <h1>Currency</h1>
+{% block currency_content %}
 
-    <table>
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ currency.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ currency.name }}</td>
-            </tr>
-            <tr>
-                <th>Symbol</th>
-                <td>{{ currency.symbol }}</td>
-            </tr>
-            <tr>
-                <th>Adminadd</th>
-                <td>{{ currency.adminAdd }}</td>
-            </tr>
-            <tr>
-                <th>Dateadd</th>
-                <td>{% if currency.dateAdd %}{{ currency.dateAdd|date('Y-m-d H:i:s') }}{% endif %}</td>
-            </tr>
-            <tr>
-                <th>Userupdate</th>
-                <td>{{ currency.userUpdate }}</td>
-            </tr>
-            <tr>
-                <th>Dateupdate</th>
-                <td>{% if currency.dateUpdate %}{{ currency.dateUpdate|date('Y-m-d H:i:s') }}{% endif %}</td>
-            </tr>
-            <tr>
-                <th>Isactive</th>
-                <td>{% if currency.isActive %}Yes{% else %}No{% endif %}</td>
-            </tr>
-        </tbody>
-    </table>
+    <h2>Détails de la devise</h2>
 
-    <ul>
-        <li>
-            <a href="{{ path('currency_index') }}">Back to the list</a>
-        </li>
-        <li>
-            <a href="{{ path('currency_edit', { 'id': currency.id }) }}">Edit</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
-{% endblock %}
+    <div>
+        <hr/>
+        <dl class="dl-horizontal">
+            <dt>
+                Nom
+            </dt>
+            <dd>
+                {{ currency.name }}
+            </dd>
+
+            <dt>
+                Symbole
+            </dt>
+            <dd>
+                {{ currency.symbol }}
+            </dd>
+
+            <dt>
+                Administateur d'ajout
+            </dt>
+            <dd>
+                {{ nameAdminAdd }}
+            </dd>
+
+            <dt>
+                Date d'ajout
+            </dt>
+            <dd>
+                {{ currency.dateAdd|date("d/m/Y h:m:s") }}
+            </dd>
+
+            {% if currency.userUpdate is not null %}
+                <dt>
+                    Administateur de mise à jour
+                </dt>
+                <dd>
+                    {{ nameUserUpdate }}
+                </dd>
+
+                <dt>
+                    Date de mise à jour
+                </dt>
+                <dd>
+                    {{ currency.dateUpdate|date("d/m/Y h:m:s") }}
+                </dd>
+            {% endif %}
+        </dl>
+    </div>
+    <p>
+        <a href="{{ path('a2_currency_index') }}">Retour à la liste</a> |
+        <a href="{{ path('a2_currency_edit', { 'id': currency.id }) }}">Modifier</a>
+    </p>
+
+{% endblock currency_content %}
