--- a/src/A2/CarBundle/Resources/views/Car/new.html.twig
+++ b/src/A2/CarBundle/Resources/views/Car/new.html.twig
@@ -1,16 +1,121 @@
-{% extends 'base.html.twig' %}
+{% extends "A2CarBundle::layout.html.twig" %}
 
-{% block body %}
-    <h1>Car creation</h1>
+{% block car_content %}
+
+    <h2>Ajout d'une nouvelle voiture</h2>
 
     {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <input type="submit" value="Create" />
+
+    {{ form_errors(form) }}
+    <div class="form-horizontal">
+        <hr />
+        <div class="form-group">
+            {{ form_label(form.category, "Catégorie", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.category) }}
+            <div class="col-md-4">
+                {{ form_widget(form.category, {'attr': {'class': 'form-control'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(form.model, "Model", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.model) }}
+            <div class="col-md-4">
+                {{ form_widget(form.model, {'attr': {'class': 'form-control'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(form.color, "Couleur", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.color) }}
+            <div class="col-md-4">
+                {{ form_widget(form.color, {'attr': {'class': 'form-control'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(form.price, "Prix", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.price) }}
+            <div class="col-md-4">
+                {{ form_widget(form.price, {'attr': {'class': 'form-control'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(form.currency, "Devise", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.currency) }}
+            <div class="col-md-4">
+                {{ form_widget(form.currency, {'attr': {'class': 'form-control'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(form.energy, "Energie", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.energy) }}
+            <div class="col-md-4">
+                {{ form_widget(form.energy, {'attr': {'class': 'form-control'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(form.co2, "Production Co2", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.co2) }}
+            <div class="col-md-4">
+                {{ form_widget(form.co2, {'attr': {'class': 'form-control'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(form.gearBox, "Boîte à vitesse", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.gearBox) }}
+            <div class="col-md-4">
+                {{ form_widget(form.gearBox, {'attr': {'class': 'form-control'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(form.weight, "Poids", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.weight) }}
+            <div class="col-md-4">
+                {{ form_widget(form.weight, {'attr': {'class': 'form-control'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(form.power, "Puissance", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.power) }}
+            <div class="col-md-4">
+                {{ form_widget(form.power, {'attr': {'class': 'form-control'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(form.maxSpeed, "Vitesse max", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.maxSpeed) }}
+            <div class="col-md-4">
+                {{ form_widget(form.maxSpeed, {'attr': {'class': 'form-control'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(form.storehouse, "Entrepôt", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.storehouse) }}
+            <div class="col-md-4">
+                {{ form_widget(form.storehouse, {'attr': {'class': 'form-control'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(form.year, "Année", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.year) }}
+            <div class="col-md-4">
+                {{ form_widget(form.year, {'attr': {'class': 'form-control'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(form.image, "Image", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.image) }}
+            <div class="col-md-4">
+                {{ form_widget(form.image.file) }}
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Créer" class="btn btn-primary" />
+            </div>
+        </div>
+    </div>
+
+    <p><a href="{{ path('a2_car_index') }}">Retour à la liste</a></p>
+
     {{ form_end(form) }}
 
-    <ul>
-        <li>
-            <a href="{{ path('car_index') }}">Back to the list</a>
-        </li>
-    </ul>
-{% endblock %}
+{% endblock car_content %}
