--- a/src/A2/CarBundle/Resources/views/Car/edit.html.twig
+++ b/src/A2/CarBundle/Resources/views/Car/edit.html.twig
@@ -1,21 +1,121 @@
-{% extends 'base.html.twig' %}
+{% extends "A2CarBundle::layout.html.twig" %}
 
-{% block body %}
-    <h1>Car edit</h1>
+{% block car_content %}
+
+    <h2>Modification de la voiture</h2>
 
     {{ form_start(edit_form) }}
-        {{ form_widget(edit_form) }}
-        <input type="submit" value="Edit" />
+
+    {{ form_errors(edit_form) }}
+    <div class="form-horizontal">
+        <hr />
+        <div class="form-group">
+            {{ form_label(edit_form.category, "Catégorie", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(edit_form.category) }}
+            <div class="col-md-4">
+                {{ form_widget(edit_form.category, {'attr': {'class': 'form-control', 'value': car.category.name }}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(edit_form.model, "Model", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(edit_form.model) }}
+            <div class="col-md-4">
+                {{ form_widget(edit_form.model, {'attr': {'class': 'form-control', 'value': car.model.name }}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(edit_form.color, "Couleur", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(edit_form.color) }}
+            <div class="col-md-4">
+                {{ form_widget(edit_form.color, {'attr': {'class': 'form-control', 'value': car.color }}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(edit_form.price, "Prix", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(edit_form.price) }}
+            <div class="col-md-4">
+                {{ form_widget(edit_form.price, {'attr': {'class': 'form-control', 'value': car.price }}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(edit_form.currency, "Devise", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(edit_form.currency) }}
+            <div class="col-md-4">
+                {{ form_widget(edit_form.currency, {'attr': {'class': 'form-control', 'value': car.currency.symbol }}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(edit_form.energy, "Energie", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(edit_form.energy) }}
+            <div class="col-md-4">
+                {{ form_widget(edit_form.energy, {'attr': {'class': 'form-control', 'value': car.energy }}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(edit_form.co2, "Production Co2", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(edit_form.co2) }}
+            <div class="col-md-4">
+                {{ form_widget(edit_form.co2, {'attr': {'class': 'form-control', 'value': car.co2 }}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(edit_form.gearBox, "Boîte à vitesse", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(edit_form.gearBox) }}
+            <div class="col-md-4">
+                {{ form_widget(edit_form.gearBox, {'attr': {'class': 'form-control', 'value': car.gearBox }}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(edit_form.weight, "Poids", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(edit_form.weight) }}
+            <div class="col-md-4">
+                {{ form_widget(edit_form.weight, {'attr': {'class': 'form-control', 'value': car.weight }}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(edit_form.power, "Puissance", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(edit_form.power) }}
+            <div class="col-md-4">
+                {{ form_widget(edit_form.power, {'attr': {'class': 'form-control', 'value': car.power }}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(edit_form.maxSpeed, "Vitesse max", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(edit_form.maxSpeed) }}
+            <div class="col-md-4">
+                {{ form_widget(edit_form.maxSpeed, {'attr': {'class': 'form-control', 'value': car.maxSpeed }}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(edit_form.storehouse, "Entrepôt", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(edit_form.storehouse) }}
+            <div class="col-md-4">
+                {{ form_widget(edit_form.storehouse, {'attr': {'class': 'form-control', 'value': car.storehouse.name }}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(edit_form.year, "Année", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(edit_form.year) }}
+            <div class="col-md-4">
+                {{ form_widget(edit_form.year, {'attr': {'class': 'form-control', 'value': car.year }}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(edit_form.image, "Image", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(edit_form.image) }}
+            <div class="col-md-4">
+                {{ form_widget(edit_form.image.file) }}
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Valider" class="btn btn-default" />
+            </div>
+        </div>
+    </div>
+
+    <p><a href="{{ path('a2_category_index') }}">Retour à la liste</a></p>
+
     {{ form_end(edit_form) }}
 
-    <ul>
-        <li>
-            <a href="{{ path('car_index') }}">Back to the list</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
-{% endblock %}
+{% endblock car_content %}
