--- a/src/A2/CustomerBundle/Resources/views/Customer/new.html.twig
+++ b/src/A2/CustomerBundle/Resources/views/Customer/new.html.twig
@@ -1,16 +1,93 @@
-{% extends 'base.html.twig' %}
+{% extends "A2CustomerBundle::layout.html.twig" %}
 
-{% block body %}
-    <h1>Customer creation</h1>
+{% block customer_content %}
+
+    <h2>Création d'un nouveau client</h2>
 
     {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <input type="submit" value="Create" />
+
+    {{ form_errors(form) }}
+    <div class="form-horizontal">
+        <hr />
+        <div class="form-group">
+            {{ form_label(form.name, "Nom", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.name) }}
+            <div class="col-md-4">
+                {{ form_widget(form.name, {'attr': {'class': 'form-control'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(form.lastname, "Prénom", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.lastname) }}
+            <div class="col-md-4">
+                {{ form_widget(form.lastname, {'attr': {'class': 'form-control'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(form.bday, "Date de naissance", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.bday) }}
+            <div class="col-md-3">
+                {{ form_widget(form.bday.day, {'attr': {'class': 'form-control'}}) }}
+            </div>
+            <div class="col-md-4">
+                {{ form_widget(form.bday.month, {'attr': {'class': 'form-control'}}) }}
+            </div>
+            <div class="col-md-3">
+                {{ form_widget(form.bday.year, {'attr': {'class': 'form-control'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(form.email, "E-mail", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.email) }}
+            <div class="col-md-4">
+                {{ form_widget(form.email, {'attr': {'class': 'form-control'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(form.address, "Adresse", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.address.streetNb) }}
+            <div class="col-md-3">
+                {{ form_widget(form.address.streetNb, {'attr': {'class': 'form-control', 'placeholder': 'No Rue'}}) }}
+            </div>
+            {{ form_errors(form.address.streetName) }}
+            <div class="col-md-7">
+                {{ form_widget(form.address.streetName, {'attr': {'class': 'form-control', 'placeholder': 'Rue'}}) }}
+            </div>
+            <div class="col-md-2"></div>
+            {{ form_errors(form.address.complement) }}
+            <div class="col-md-10">
+                {{ form_widget(form.address.complement, {'attr': {'class': 'form-control', 'placeholder': 'Complément'}}) }}
+            </div>
+            <div class="col-md-2"></div>
+            {{ form_errors(form.address.zipCode) }}
+            <div class="col-md-3">
+                {{ form_widget(form.address.zipCode, {'attr': {'class': 'form-control', 'placeholder': 'Cde Postal'}}) }}
+            </div>
+            {{ form_errors(form.address.town) }}
+            <div class="col-md-4">
+                {{ form_widget(form.address.town, {'attr': {'class': 'form-control', 'placeholder': 'Ville'}}) }}
+            </div>
+            {{ form_errors(form.address.country) }}
+            <div class="col-md-3">
+                {{ form_widget(form.address.country, {'attr': {'class': 'form-control', 'placeholder': 'Pays'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form_label(form.num, "Numéro", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(form.num) }}
+            <div class="col-md-4">
+                {{ form_widget(form.num, {'attr': {'class': 'form-control'}}) }}
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Finaliser la vente" class="btn btn-primary" />
+            </div>
+        </div>
+    </div>
+
+    <p><a href="{{ path('a2_car_sold', { 'id': id }) }}">Annuler</a></p>
+
     {{ form_end(form) }}
 
-    <ul>
-        <li>
-            <a href="{{ path('customer_index') }}">Back to the list</a>
-        </li>
-    </ul>
-{% endblock %}
+{% endblock customer_content %}
