--- a/src/A2/CustomerBundle/Resources/views/Customer/index.html.twig
+++ b/src/A2/CustomerBundle/Resources/views/Customer/index.html.twig
@@ -1,57 +1,45 @@
-{% extends 'base.html.twig' %}
+{% extends "A2CustomerBundle::layout.html.twig" %}
 
-{% block body %}
-    <h1>Customers list</h1>
+{% block customer_content %}
 
-    <table>
-        <thead>
+    <h2>Liste des Clients</h2>
+
+    {{ form_start(form) }}
+    {{ form_errors(form) }}
+    <table align="right">
+        <tr>
+            <td>Rechercher un client</td>
+            <td>{{ form_widget(form.searchString, {'attr': {'class': 'form-control'}}) }}</td>
+            <td><input type="submit" value="Rechercher" class="btn btn-default"></td>
+        </tr>
+    </table>
+    {{ form_end(form) }}
+
+    <table class="table">
+        <tr>
+            <th>
+                Nom
+            </th>
+            <th>
+                Prénom
+            </th>
+        </tr>
+
+        {% for car in cars %}
             <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>Lastname</th>
-                <th>Bday</th>
-                <th>Email</th>
-                <th>Num</th>
-                <th>Adminadd</th>
-                <th>Dateadd</th>
-                <th>Userupdate</th>
-                <th>Dateupdate</th>
-                <th>Isactive</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for customer in customers %}
-            <tr>
-                <td><a href="{{ path('customer_show', { 'id': customer.id }) }}">{{ customer.id }}</a></td>
-                <td>{{ customer.name }}</td>
-                <td>{{ customer.lastname }}</td>
-                <td>{% if customer.bday %}{{ customer.bday|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>{{ customer.email }}</td>
-                <td>{{ customer.num }}</td>
-                <td>{{ customer.adminAdd }}</td>
-                <td>{% if customer.dateAdd %}{{ customer.dateAdd|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>{{ customer.userUpdate }}</td>
-                <td>{% if customer.dateUpdate %}{{ customer.dateUpdate|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>{% if customer.isActive %}Yes{% else %}No{% endif %}</td>
                 <td>
-                    <ul>
-                        <li>
-                            <a href="{{ path('customer_show', { 'id': customer.id }) }}">show</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('customer_edit', { 'id': customer.id }) }}">edit</a>
-                        </li>
-                    </ul>
+                    {{ customer.name }}
+                </td>
+                <td>
+                    {{ customer.lastname }}
+                </td>
+                <td>
+                    <a href="{{ path('a2_customer_show', { 'id': customer.id }) }}">Détails</a> |
+                    <a href="{{ path('a2_customer_edit', { 'id': customer.id }) }}">Modifier</a> |
+                    <a href="{{ path('a2_customer_delete', { 'id': customer.id }) }}">Supprimer</a>
                 </td>
             </tr>
         {% endfor %}
-        </tbody>
     </table>
 
-    <ul>
-        <li>
-            <a href="{{ path('customer_new') }}">Create a new customer</a>
-        </li>
-    </ul>
-{% endblock %}
+{% endblock customer_content %}
